@@ -79,8 +79,9 @@ Mono_Posix_Syscall_settimeofday (
 	return r;
 }
 
+/* Remove this at some point in the future */
 gint32
-Mono_Posix_Syscall_utimes (const char *filename,
+Mono_Posix_Syscall_utimes_bad (const char *filename,
 	struct Mono_Posix_Timeval *tv)
 {
 	struct timeval _tv;
@@ -93,6 +94,53 @@ Mono_Posix_Syscall_utimes (const char *filename,
 	}
 
 	return utimes (filename, ptv);
+}
+
+static inline struct timeval*
+copy_utimes (struct timeval* to, struct Mono_Posix_Timeval *from)
+{
+	if (from) {
+		to[0].tv_sec  = from->tv_sec;
+		to[0].tv_usec = from->tv_usec;
+		to[1].tv_sec  = from->tv_sec;
+		to[1].tv_usec = from->tv_usec;
+		return to;
+	}
+
+	return NULL;
+}
+
+gint32
+Mono_Posix_Syscall_utimes(const char *filename, struct Mono_Posix_Timeval *tv)
+{
+	struct timeval _tv[2];
+	struct timeval *ptv;
+
+	ptv = copy_utimes (_tv, tv);
+
+	return utimes (filename, ptv);
+}
+
+gint32
+Mono_Posix_Syscall_lutimes(const char *filename, struct Mono_Posix_Timeval *tv)
+{
+	struct timeval _tv[2];
+	struct timeval *ptv;
+
+	ptv = copy_utimes (_tv, tv);
+
+	return lutimes (filename, ptv);
+}
+
+gint32
+Mono_Posix_Syscall_futimes(int fd, struct Mono_Posix_Timeval *tv)
+{
+	struct timeval _tv[2];
+	struct timeval *ptv;
+
+	ptv = copy_utimes (_tv, tv);
+
+	return futimes (fd, ptv);
 }
 
 G_END_DECLS
